      modes where the easy-escape minor mode is automatically activated.
    - The new ``<f11> "`` key binding to *easy-escape-minor-mode* allows quick
      toggle of the easy-escape minor mode.
    - The command is described in the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/search-replace.pdf][⅀ Search/Replace PDF]].
- Update: *Text Insertion*:
  - Modified: key binding to *pel-toggle-update-copyright-on-save* from
    ``<f11> M-C`` to ``<f11> M-@``.
  - Modified: key bindings, using more lower case letters:
    - ``<f6> f`` and ``f11> i f`` are now used instead of ``<f6> F`` and
      ``<f11>> i F`` for **pel-insert-filename*,
    - ``<f11> i c`` is used instead of ``<f11> i C`` for *copyright*.
  - New: key bindings:
    - ``<f11> i M-t`` bound to *time-stamp-toggle-active*,
    - ``<f11> i M-c`` bound to *copyright-update*.
  - Improved: generic file mode/header template insetion (``<f6>
    h``) and separator line insertion (``<f6> l``) now get comment style from
    user if they are not already defined.
- Update: *Text Modes*:
  - New: *glasses-mode* is now bound to ``<f11> t m g`` key sequence.  The
    *pel-show-text-modes* command (bound to ``<f11 t m ?``) now also display
    the state of glasses-mode.
  - New: overwrite-mode is also bound to the <Esc><kp-0> key sequence.  This
    makes it very similar to the default <insert> key which is not available
    in macOS keyboards.
- Update: *VCS*:
  - New: The *pel-use-gitignore-mode* user-option activates support for the
    *gitignore-mode*, *gitattributes-mode* and the *gitconfig-mode*.
  - New: The *pel-use-hgignore-mode* user-option activates support for
    *hgignore-mode* when turned on (set to t).  This provides font locking for
    the Mercurial .hgignore files.
- Update: *Windows Management*:
  - The Windows Hydra now provides quick access to the
    ``pel-toggle-window-dedicated`` command which toggles the dedicated state
    of a window.